Distance and DeltaTime

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -155,8 +155,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Main
 
 [DetailCustomWidgetExpansion]
-BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.Collision.Collision,
+BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 CapsuleComponent=
+StaticMeshActor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
+K2Node_VariableGet=BP_ThirdPersonCharacter_C.Collision.Collision,
+K2Node=BP_ThirdPersonCharacter_C.Collision.Collision,
+BP_Ammo_C=BP_ThirdPersonCharacter_C.Collision.Collision,
+BP_LearningKit_PlayerCharacter_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Main
@@ -1156,9 +1161,12 @@ Voice.TimeStamp=2023.04.08-00.12.21
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2023.04.08-00.12.11
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2023.04.08-00.11.59
+BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Main.Main:PersistentLevel.Main
 
 [DetailCategories]
 MovingPlatform.MovingPlatform=True
@@ -1217,7 +1225,7 @@ BP_ThirdPersonCharacter_C.Networking=True
 BP_ThirdPersonCharacter_C.Input=True
 BP_ThirdPersonCharacter_C.Actor=True
 StaticMeshActor.Physics=True
-StaticMeshActor.Collision=True
+StaticMeshActor.Collision=False
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
@@ -1245,12 +1253,157 @@ StaticMeshComponent.Cooking=True
 MovingPlatform.TransformCommon=True
 BP_ThirdPersonCharacter_C.Materials=True
 BP_ThirdPersonCharacter_C.SkeletalMesh=True
+NiagaraActor.TransformCommon=True
+NiagaraActor.Niagara=True
+NiagaraActor.NiagaraComponent_Parameters=True
+NiagaraActor.NiagaraComponent_Utilities=True
+NiagaraActor.Activation=True
+NiagaraActor.Lighting=True
+NiagaraActor.Attachment=True
+NiagaraActor.Randomness=True
+NiagaraActor.Parameters=True
+NiagaraActor.Compilation=True
+NiagaraActor.HLOD=True
+NiagaraActor.Rendering=True
+NiagaraActor.Navigation=True
+NiagaraActor.Tags=True
+NiagaraActor.Cooking=True
+NiagaraActor.Replication=True
+NiagaraActor.Physics=True
+NiagaraActor.Networking=True
+NiagaraActor.Actor=True
+Main_C.Tick=True
+Main_C.Replication=True
+Main_C.Actor=True
+Main_C.Input=True
+Main_C.HLOD=True
+Main_C.Physics=True
+Main_C.WorldPartition=True
+Main_C.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+BP_Ammo_C.Physics=True
+BP_Ammo_C.Collision=True
+BP_Ammo_C.TransformCommon=True
+BP_Ammo_C.StaticMesh=True
+BP_Ammo_C.Materials=True
+BP_Ammo_C.Tick=True
+BP_Ammo_C.ComponentTick=True
+BP_Ammo_C.Lighting=True
+BP_Ammo_C.HLOD=True
+BP_Ammo_C.Rendering=True
+BP_Ammo_C.Navigation=True
+BP_Ammo_C.VirtualTexture=True
+BP_Ammo_C.Tags=True
+BP_Ammo_C.Replication=True
+BP_Ammo_C.ComponentReplication=True
+BP_Ammo_C.Variable=True
+BP_Ammo_C.Cooking=True
+BP_Ammo_C.Actor=True
+BP_Ammo_C.Input=True
+BP_Ammo_C.WorldPartition=True
+BP_Ammo_C.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+BP_LearningKit_PlayerCharacter_C.TransformCommon=True
+BP_LearningKit_PlayerCharacter_C.Animation=True
+BP_LearningKit_PlayerCharacter_C.Mesh=True
+BP_LearningKit_PlayerCharacter_C.Tick=True
+BP_LearningKit_PlayerCharacter_C.Default=True
+BP_LearningKit_PlayerCharacter_C.ComponentTick=True
+BP_LearningKit_PlayerCharacter_C.Clothing=True
+BP_LearningKit_PlayerCharacter_C.Physics=True
+BP_LearningKit_PlayerCharacter_C.Collision=True
+BP_LearningKit_PlayerCharacter_C.LeaderPoseComponent=True
+BP_LearningKit_PlayerCharacter_C.Lighting=True
+BP_LearningKit_PlayerCharacter_C.AnimationRig=True
+BP_LearningKit_PlayerCharacter_C.Deformer=True
+BP_LearningKit_PlayerCharacter_C.SkinWeights=True
+BP_LearningKit_PlayerCharacter_C.Rendering=True
+BP_LearningKit_PlayerCharacter_C.HLOD=True
+BP_LearningKit_PlayerCharacter_C.Mobile=True
+BP_LearningKit_PlayerCharacter_C.Navigation=True
+BP_LearningKit_PlayerCharacter_C.RayTracing=True
+BP_LearningKit_PlayerCharacter_C.VirtualTexture=True
+BP_LearningKit_PlayerCharacter_C.Tags=True
+BP_LearningKit_PlayerCharacter_C.AssetUserData=True
+BP_LearningKit_PlayerCharacter_C.Replication=True
+BP_LearningKit_PlayerCharacter_C.ComponentReplication=True
+BP_LearningKit_PlayerCharacter_C.Activation=True
+BP_LearningKit_PlayerCharacter_C.Variable=True
+BP_LearningKit_PlayerCharacter_C.Cooking=True
+BP_LearningKit_PlayerCharacter_C.Character Movement (General Settings)=True
+BP_LearningKit_PlayerCharacter_C.Character Movement: Walking=True
+BP_LearningKit_PlayerCharacter_C.Character Movement: Jumping / Falling=True
+BP_LearningKit_PlayerCharacter_C.Character Movement (Networking)=True
+BP_LearningKit_PlayerCharacter_C.Character Movement: Swimming=True
+BP_LearningKit_PlayerCharacter_C.Character Movement: Flying=True
+BP_LearningKit_PlayerCharacter_C.Character Movement: Custom Movement=True
+BP_LearningKit_PlayerCharacter_C.Character Movement (Rotation Settings)=True
+BP_LearningKit_PlayerCharacter_C.Character Movement: Physics Interaction=True
+BP_LearningKit_PlayerCharacter_C.Character Movement=True
+BP_LearningKit_PlayerCharacter_C.Character Movement: Avoidance=True
+BP_LearningKit_PlayerCharacter_C.RootMotion=True
+BP_LearningKit_PlayerCharacter_C.Character Movement: NavMesh Movement=True
+BP_LearningKit_PlayerCharacter_C.NavMovement=True
+BP_LearningKit_PlayerCharacter_C.Velocity=True
+BP_LearningKit_PlayerCharacter_C.PlanarMovement=True
+BP_LearningKit_PlayerCharacter_C.MovementComponent=True
+BP_LearningKit_PlayerCharacter_C.Shape=True
+BP_LearningKit_PlayerCharacter_C.Character=True
+BP_LearningKit_PlayerCharacter_C.Camera=True
+BP_LearningKit_PlayerCharacter_C.Pawn=True
+BP_LearningKit_PlayerCharacter_C.Actor=True
+BP_LearningKit_PlayerCharacter_C.Input=True
+BP_LearningKit_PlayerCharacter_C.WorldPartition=True
+BP_LearningKit_PlayerCharacter_C.Events=True
+BP_LearningKit_PlayerCharacter_C.Materials=True
+K2Node_VariableGet.Events=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Variable=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+BP_Ammo_C.Networking=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+StaticMeshComponent.Sockets=False
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+BP_ThirdPersonCharacter_C.Optimization=True
+BP_ThirdPersonCharacter_C.LOD=True
+BP_ThirdPersonCharacter_C.MaterialParameters=True
+BP_ThirdPersonCharacter_C.TextureStreaming=True
+BP_LearningKit_PlayerCharacter_C.SkeletalMesh=True
+MovingPlatform.Moving Platform=True
+MovingPlatform.Distance=True
 
 [DetailPropertyExpansion]
-BP_ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_LearningKit_PlayerCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+BP_Ammo_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1287,4 +1440,175 @@ Project=C:/Program Files/EpicGames/UE_5.1/
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/EpicGames/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[AssetEditorToolkitTabLocation]
+/Game/Main.Main:PersistentLevel.Main=0
+/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=0
+/Game/BP_Ammo.BP_Ammo=0
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bEnableInputTriggerSupportWarnings=False
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=True
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+
+[ContentBrowser]
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+FavoritePaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
+
+[WidgetTemplatesExpanded]
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+
+[ContentBrowserRecent]
+MRUItem0=/Game/UI/HUD
+MRUItem1=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem2=/Game/BP_Ammo
+
+[MessageLog]
+LastLogListing=BlueprintLog
+
+[SelectionDetails]
+PreserveScaleRatio=True
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
 
