If/Else and Small Parkour Level Designing

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -155,13 +155,23 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/Main
 
 [DetailCustomWidgetExpansion]
-BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
 CapsuleComponent=
-StaticMeshActor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
-K2Node_VariableGet=BP_ThirdPersonCharacter_C.Collision.Collision,
+StaticMeshActor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+K2Node_VariableGet=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
 K2Node=BP_ThirdPersonCharacter_C.Collision.Collision,
 BP_Ammo_C=BP_ThirdPersonCharacter_C.Collision.Collision,
-BP_LearningKit_PlayerCharacter_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+BP_LearningKit_PlayerCharacter_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
+StaticMeshComponent=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+SceneComponent=
+MovingPlatform=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+BP_MovingPlatform_C=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
+BP_PushingBlock_C=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+SkeletalMeshComponent=BP_ThirdPersonCharacter_C.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,
+NiagaraActor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+NiagaraFloat=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+LinearColor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
+Actor=BP_ThirdPersonCharacter_C.Collision.Collision,StaticMeshActor.Collision.Collision,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_LearningKit_PlayerCharacter_C.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Main
@@ -1163,10 +1173,14 @@ MovieSceneCapture.TimeStamp=2023.04.08-00.12.11
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2023.04.08-00.11.59
 BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.04.08-00.12.16
+SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Main.Main:PersistentLevel.Main
+OpenAssetsAtExit=/Game/BP_MovingPlatform.BP_MovingPlatform
+OpenAssetsAtExit=/Game/BP_PushingBlock.BP_PushingBlock
+OpenAssetsAtExit=/Game/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [DetailCategories]
 MovingPlatform.MovingPlatform=True
@@ -1395,12 +1409,64 @@ BP_ThirdPersonCharacter_C.TextureStreaming=True
 BP_LearningKit_PlayerCharacter_C.SkeletalMesh=True
 MovingPlatform.Moving Platform=True
 MovingPlatform.Distance=True
+BP_LearningKit_PlayerCharacter_C.Networking=True
+BP_MovingPlatform_C.Moving Platform=True
+BP_MovingPlatform_C.Tick=True
+BP_MovingPlatform_C.Replication=True
+BP_MovingPlatform_C.Rendering=True
+BP_MovingPlatform_C.Collision=True
+BP_MovingPlatform_C.Actor=True
+BP_MovingPlatform_C.Input=True
+BP_MovingPlatform_C.HLOD=True
+BP_MovingPlatform_C.Physics=True
+BP_MovingPlatform_C.WorldPartition=True
+BP_MovingPlatform_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+BP_MovingPlatform_C.TransformCommon=True
+BP_MovingPlatform_C.Networking=True
+BP_PushingBlock_C.Moving Platform=True
+BP_PushingBlock_C.Tick=True
+BP_PushingBlock_C.Replication=True
+BP_PushingBlock_C.Rendering=True
+BP_PushingBlock_C.Collision=True
+BP_PushingBlock_C.Actor=True
+BP_PushingBlock_C.Input=True
+BP_PushingBlock_C.HLOD=True
+BP_PushingBlock_C.Physics=True
+BP_PushingBlock_C.WorldPartition=True
+BP_PushingBlock_C.Events=True
+BP_PushingBlock_C.TransformCommon=True
+BP_PushingBlock_C.Networking=True
+BP_ThirdPersonCharacter_C.Tick=True
+BP_ThirdPersonCharacter_C.Default=True
+BP_ThirdPersonCharacter_C.ComponentTick=True
+BP_ThirdPersonCharacter_C.ComponentReplication=True
+BP_ThirdPersonCharacter_C.Variable=True
+BP_ThirdPersonCharacter_C.WorldPartition=True
+BP_ThirdPersonCharacter_C.Events=True
+Actor.Collision=True
+Actor.Physics=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.HLOD=True
+Actor.Networking=True
+Actor.Actor=True
 
 [DetailPropertyExpansion]
-BP_ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BP_LearningKit_PlayerCharacter_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 BP_Ammo_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -1445,6 +1511,7 @@ RecentsFiles=C:/Program Files/EpicGames/UE_5.1/Engine/Plugins/Animation/ControlR
 /Game/Main.Main:PersistentLevel.Main=0
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=0
 /Game/BP_Ammo.BP_Ammo=0
+/Game/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1513,6 +1580,27 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.FavoritesAreaExpanded=False
+ContentBrowserTab1.PathAreaExpanded=True
+ContentBrowserTab1.CollectionAreaExpanded=False
+ContentBrowserTab1.FavoritesSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.CollectionSearchAreaExpanded=False
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab1.PluginFilters=
+ContentBrowserTab1.Favorites.SelectedPaths=
+ContentBrowserTab1.SelectedCollections=
+ContentBrowserTab1.ExpandedCollections=
+ContentBrowserTab1.ThumbnailSize=2
+ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [WidgetTemplatesExpanded]
 Audio=False
@@ -1529,16 +1617,22 @@ User Created=False
 Advanced=False
 
 [PlacementMode]
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/BP_PushingBlock.BP_PushingBlock;
+RecentlyPlaced=/Game/BP_MovingPlatform.BP_MovingPlatform;
+RecentlyPlaced=/Game/LearningKit_Games/Assets/Architecture/Walls/SM_Kit_Wall_Straight.SM_Kit_Wall_Straight;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/HUD
-MRUItem1=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem2=/Game/BP_Ammo
+MRUItem0=/Game/BP_ThirdPersonCharacter
+MRUItem1=/Game/BP_PushingBlock
+MRUItem2=/Game/BP_MovingPlatform
+MRUItem3=/Game/UI/HUD
+MRUItem4=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem5=/Game/BP_Ammo
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [SelectionDetails]
 PreserveScaleRatio=True
